--- a/Maui.IndustriesDictionary/MainPage.xaml
+++ b/Maui.IndustriesDictionary/MainPage.xaml
@@ -59,7 +59,7 @@
         </Border>
 
         <Grid Grid.Row="1"
-              RowDefinitions="Auto">
+              >
 
             <ActivityIndicator Grid.Column="0"
                                Grid.ColumnSpan="3"
@@ -77,7 +77,7 @@
                         Grid.ColumnSpan="3"
                         Grid.RowSpan="3">
 
-                <CollectionView x:Name="CollectionMainTaskList"
+                <CollectionView x:Name="CollectionMainWords"
                                 Margin="0,20,0,150"
                                 SelectionMode="Single"
                                 ItemsSource="{Binding  }">
@@ -106,11 +106,12 @@
                                         ColumnDefinitions="50, *, 50"
                                         Padding="15"
                                         RowSpacing="20">
+                                    
                                     <Image Source="united_card.png"
                                            WidthRequest="24"
                                            HeightRequest="24"
                                            Grid.Column="0" />
-                                    <Label Text="Axle journal turning and roller burnishing lathesr burnishing lathes"
+                                    <Label Text="{Binding English}"
                                            FontSize="Small"
                                            TextColor="Black"
                                            Grid.Column="1"
@@ -121,7 +122,7 @@
                                            HeightRequest="24"
                                            Grid.Column="0"
                                            Grid.Row="1" />
-                                    <Label Text="Additive und Füllstoffe für Verbereitung vonKautsc hukmi schungen"
+                                    <Label Text="{Binding Deutsch}"
                                            FontSize="Small"
                                            TextColor="Black"
                                            Grid.Column="1"
@@ -133,8 +134,7 @@
                                            HeightRequest="24"
                                            Grid.Column="2"
                                            Grid.Row="2" />
-                                    <Label Text="واد افزودنی و پُر کننده برای
-پردازش مخلوط یالستیکی"
+                                    <Label Text="{Binding Farsi}"
                                            FontSize="Small"
                                            TextColor="Black"
                                            Grid.Column="0"
